--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup">
-        <activity android:name=".OptionsActivity"></activity>
+        <activity android:name=".OptionsActivity" />
         <activity android:name=".CreateUserActivity" />
         <activity android:name=".JoinGameActivity" />
         <activity android:name=".CreateGameActivity" />
