--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        android:icon="@drawable/ctf"
+        android:icon="@drawable/flag"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/ctf"
+        android:roundIcon="@drawable/flag"
         android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
@@ -20,7 +20,8 @@
         <activity android:name=".ScoreActivity" />
         <activity
             android:name=".TimerActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".GameActivity"
             android:label="@string/title_activity_game"
