--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
+
     <application
         android:icon="@drawable/flag"
         android:label="@string/app_name"
@@ -52,6 +53,8 @@
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait" />
+
+        <service android:enabled="true" android:name=".BackgroundSoundService" />
     </application>
 
 </manifest>
